--- a/.gitignore
+++ b/.gitignore
@@ -42,11 +42,12 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
-
+*.DS_Store
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
+
 
 # Unity3D generated file on crash reports
 sysinfo.txt
